--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	    <li><a href="#!/">Top</a></li>
 	    <li><a href="#!/register">登録</a></li>
 	    <li>リスト</li>
+	    <li>ログイン</li>
 	  </ul>
 	</div>
 	<div class="col-md-9" ng-view></div>
