--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="row">
 	<div class="col-md-3">
-	  <h1>Hackathon DB</h1>
+	  <h1><a href="#!/">Hackathon DB</a></h1>
 	  <ul>
 	    <li><a href="#!/">Top</a></li>
 	    <li><a href="#!/register">登録</a></li>
